fix mobile overflow

--- a/project2/css/global.css
+++ b/project2/css/global.css
@@ -4,5 +4,11 @@ html, body
   width: 100%;
 }
 
+img
+{
+  width: auto;
+  overflow: hidden;
+}
+
 
 
